--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.loginuceva222">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginUceva222"
         tools:targetApi="31">
+        <service
+            android:name=".MostrarDatosSegundoPlano"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".Home"
             android:exported="false" />
